2006-05-22 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_test.pl: Fixed STC block in boiler plate test message

2006-05-19 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Moved to VOEvent v1.1
	
	* bin/event_client.pl: Moved to VOEvent v1.1
	
	* bin/event_test.pl: Moved to VOEvent v1.1
	
	* bin/raptor_alert.pl: Moved to VOEvent v1.1
	
	* bin/raptor_gateway.pl: Moved to VOEvent v1.1
	
	* eSTAR/Broker/Handler.pm: Moved to VOEvent v1.1
	
	* bin/ogle_parsemail.pl: Removed redundant UseSTC hash element
	
2006-05-16 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_test.pl: Fixed STC block

2006-04-14 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/gcn_server.pl: Changed to run both initial and burst followup
	  on BAT position. Need to do a Phase 0 lookup at UKIRT somehow so
	  I don't have to manually fiddle this every time we change instruments
	  
2006-05-13 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/ogle_fetch.pl: Fixed code to have alternative OB06xxx
	  representation when passing the name to telescopes, supposrting 
	  Dan's code.

2006-05-11 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl: Fixed "Alarm Clock" bug, moved alarm(0)
          outside of the eval{ } block where the network timeout is set.

        * In all VOEvent related code, changed id="" to ivorn="" for v1.1

2006-04-10 Alasdair Allan <aa@astro.ex.ac.uk>

 	* Changed all Cc'ing from estar-devel to estar-status lists. Changes
          to gcn_server.pl, test_templates.pl, test_servers.pl and the UA
          and JACH Handler.pm modules. Also changed things so emails are
	  sent from estar@astro.ex.ac.uk rather than aa@astro.ex.ac.uk

	* eSTAR/Mail.pm: removed automatic Cc to aa@astro.ex.ac.uk, as all
          current messages are now getting Cc'd to estar-status

        * Mail should go via mailhost.jach.hawaii.edu rather than ieie now?

2006-03-23 Alasdair Allan <aa@astro.ex.ac.uk>
